// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WordDetails renders Greek 1`] = `
<div
  style={
    Object {
      "margin": "-10px 10px -20px",
      "maxWidth": "400px",
    }
  }
>
  
  
  <span>
    <strong>
      lemma
    </strong>
     
    lemma
  </span>
  <br />
  <span>
    <strong>
      morphology
    </strong>
     
    noun, substantive_adj, genitive, masculine, plural, F
  </span>
  <br />
  <span>
    <strong>
      strongs
    </strong>
     
    strong
  </span>
  <br />
  <span>
    <strong>
      lexicon
    </strong>
     
    
     
  </span>
  <br />
</div>
`;

exports[`WordDetails renders Hebrew 1`] = `
Array [
  <div
    style={
      Object {
        "margin": "-10px 10px -20px",
        "maxWidth": "400px",
      }
    }
  >
    
    <div
      style={
        Object {
          "margin": "0",
          "padding": "0",
        }
      }
    >
      <strong
        style={
          Object {
            "fontSize": "1.2em",
          }
        }
      >
        
      </strong>
      <br />
    </div>
    <span>
      <strong>
        morphology
      </strong>
       
      preposition
    </span>
    <br />
    
    
  </div>,
  <div
    style={
      Object {
        "margin": "-10px 10px -20px",
        "maxWidth": "400px",
      }
    }
  >
    <hr
      style={
        Object {
          "border-bottom": "1px solid gray",
          "height": "6px",
          "margin-bottom": "5px",
        }
      }
    />
    <div
      style={
        Object {
          "margin": "0",
          "padding": "0",
        }
      }
    >
      <strong
        style={
          Object {
            "fontSize": "1.2em",
          }
        }
      >
        
      </strong>
      <br />
    </div>
    <span>
      <strong>
        lemma
      </strong>
       
      lemma
    </span>
    <br />
    <span>
      <strong>
        morphology
      </strong>
       
      noun, common, feminine, singular, absolute
    </span>
    <br />
    <span>
      <strong>
        strongs
      </strong>
       
      H7225
    </span>
    <br />
    <span>
      <strong>
        lexicon
      </strong>
       
      
       
    </span>
    <br />
  </div>,
]
`;
